# gamDev

./: CMakeLists.txt  clean.bat  projectGuide.txt  run.bat  run_game.bat  sofasqud_ReadMe.txt
Data_Files/: RealLevel1.json  RealLevel1.jsonw  artassetsForward.json  boss.json  circle.json  enemy.json  enemy2.json  enemy_template.json  enemyranged.json  exit_popup.json  fakelevel.json  hang_clothes_01.json  hang_clothes_02.json  hawker_bin.json  hawker_bucket.json  hawker_cleaning_cart.json  hawker_cleaning_sign_01.json  hawker_cleaning_sign_02.json  hawker_floor_background.json  hawker_gate.json  hawker_hdb_background.json  hawker_store.json  hawker_store_animated.json  hawker_table.json  hawker_tray_return.json  howto_popup.json  imgui_layout.ini  level.json  level01.json  level02.json  level03.json  level04.json  level08.json  level_RealTutorial.json  level_test.json  main_menu_ui.json  object_template.json  player.json  rect.json  window.json  (+1 more)
Data_Files/Prefabs/: artassets.json  artassetsFrontOfPlayer.json  boss.json  circle.json  enemy.json  glow.json  hawker_bin.json  hawker_bucket.json  hawker_cleaning_cart.json  hawker_cleaning_sign_01.json  hawker_cleaning_sign_02.json  hawker_flag.json  hawker_floor_background.json  hawker_hdb_background.json  hawker_store.json  hawker_table.json  hawker_tray_return.json  invisible_hitbox.json  player.json
Data_Files/Prefabs/Lvl2_Living+Kitchen/: 00_living_kitchen_concept.json  altar_table.json  back_cabinet.json  back_sofa.json  bowl.json  brickwall_test.json  cat_tower.json  chair.json  chinese_painting.json  coffee_glass.json  coffee_maker.json  coffee_table.json  couch.json  counter_bottom_left.json  counter_bottom_mid.json  counter_bottom_right.json  counter_left.json  counter_right.json  counter_top_left.json  counter_top_mid.json  counter_top_right.json  cup.json  cut_board.json  door.json  fenced_door.json  floor_woodfloor_01.json  floor_woodfloor_02.json  floor_woodfloor_03.json  floor_woodfloor_04.json  floor_woodfloor_05.json  flower_painting.json  flower_vase.json  frame.json  fridge.json  knife.json  lamp.json  lamp_light.json  locked_room_light.json  mona_lisa_painting.json  oven.json  (+25 more)
Engine/: CMakeLists.txt
Engine/AI/: DecisionNode.cpp  DecisionNode.h  DecisionNodeHelpers.cpp  DecisionNodeHelpers.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeAsset.h  DecisionTreeDefault.cpp  DecisionTreeDefault.h
Engine/Audio/: AudioManager.cpp  AudioManager.h  SoundManager.cpp  SoundManager.h
Engine/Common/: CRTDebug.h  ComponentTypeID.h  MessageCom.h  System.h
Engine/Component/: AudioComponent.h  CircleRenderComponent.h  EnemyAttackComponent.h  EnemyComponent.h  EnemyDecisionTreeComponent.h  EnemyHealthComponent.h  EnemyTypeComponent.h  GateTargetComponent.h  GlowComponent.h  HitBoxComponent.h  HurtBoxComponent.h  PlayerAttackComponent.h  PlayerComponent.h  PlayerHealthComponent.h  RenderComponent.h  SpriteAnimationComponent.h  SpriteComponent.h  TransformComponent.h  ZoomTriggerComponent.h
Engine/Composition/: Component.h  ComponentCreator.h  Composition.cpp  Composition.h  PrefabManager.cpp  PrefabManager.h
Engine/Config/: WindowConfig.cpp  WindowConfig.h
Engine/Core/: Core.cpp  Core.hpp  Layer.cpp  Layer.h  PathUtils.cpp  PathUtils.h
Engine/Debug/: AnimationEditorPanel.cpp  AnimationEditorPanel.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  AssetManagerPanel.cpp  AssetManagerPanel.h  AudioImGui.cpp  AudioImGui.h  CrashLogger.cpp  CrashLogger.hpp  EditorGizmo.cpp  EditorGizmo.h  HierarchyPanel.cpp  HierarchyPanel.h  ImGuiLayer.cpp  ImGuiLayer.h  Inspector.cpp  Inspector.h  InspectorPanel.cpp  InspectorPanel.h  JsonEditorPanel.cpp  JsonEditorPanel.h  LayerPanel.cpp  LayerPanel.h  Perf.cpp  Perf.h  Selection.cpp  Selection.h  Spawn.cpp  Spawn.h  UndoStack.cpp  UndoStack.h
Engine/Factory/: Factory.cpp  Factory.h
Engine/Graphics/: Camera2D.cpp  Camera2D.hpp  Graphics.cpp  Graphics.hpp  GraphicsText.cpp  GraphicsText.hpp  PlayerHUD.cpp  PlayerHUD.h  Window.cpp  Window.hpp
Engine/Input/: Input.cpp  Input.h
Engine/Logic/: GateController.cpp  GateController.h
Engine/Math/: Matrix_3x3.cpp  Matrix_3x3.h  Vector_2D.h
Engine/Memory/: ComponentPool.h  GameObjectPool.cpp  GameObjectPool.h  ObjectAllocator.cpp  ObjectAllocator.h  ObjectAllocatorStorage.h
Engine/Messaging_System/: Message.hpp  Messager_Bus.hpp
Engine/Physics/Collision/: Collide_Elements.h  Collision.cpp  Collision.h
Engine/Physics/Dynamics/: RigidBodyComponent.h
Engine/Physics/System/: Physics.cpp  Physics.h
Engine/Resource_Asset_Manager/: Asset_Manager.cpp  Asset_Manager.h  Resource_Manager.cpp  Resource_Manager.h
Engine/Resource_Manager/: Resource_Manager.cpp  Resource_Manager.h
Engine/Serialization/: JsonSerialization.cpp  JsonSerialization.h  Serialization.h
Engine/Systems/: AiSystem.cpp  AiSystem.h  EnemySystem.cpp  EnemySystem.h  GUISystem.cpp  GUISystem.hpp  HealthSystem.cpp  HealthSystem.h  HitBoxSystem.cpp  HitBoxSystem.h  InputSystem.cpp  InputSystem.h  LogicSystem.cpp  LogicSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicSystem.cpp  PhysicSystem.h  RenderSystem.cpp  RenderSystem.h  SystemManager.cpp  SystemManager.h  UniformGrid.cpp  UniformGrid.h  VfxHelpers.cpp  VfxHelpers.h  audioSystem.cpp  audioSystem.h
Sandbox/: CMakeLists.txt
Sandbox/MyGame/: DefeatScreenPage.cpp  DefeatScreenPage.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.h  MainMenuPage.cpp  MainMenuPage.hpp  MathUtils.cpp  MathUtils.hpp  PauseMenuPage.cpp  PauseMenuPage.hpp  PhysicsManager.cpp  PhysicsManager.h  [To be deleted] InputManager.cpp  [To be deleted] PhysicsManager.cpp  [To be deleted] PhysicsManager.h  main.cpp
assets/Textures/Environment/lvl 1_Hawker/Old [DONT USE]/: Trashbin.140Z
cmake/: ImportDependencies.cmake
